--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="button">Get Data</button>
+    <button id="button">Get Post</button>
+    <button id="button1">Get Posts</button>
+ 
     <br>
     <br>
     <div id="output"></div>
+    <br>
+    <br>
+    <lable for="post-title">post title</lable>
+    <input id="post-title">
+    <br><br>
+    <lable for="post-body">post body</lable>
+    <input id="post-body">
+
+    <button id="button2">send post</button>
+ 
 
     <script src="ajaxJson.js"></script>
 </body>
